tests/negative/test-fail-scope1.std
Fatal error: exception Dune__exe__Sast.SemanticError("variable not found in symbol table")
